--- a/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
@@ -30,6 +30,6 @@
     project-name: 'sdc-dcae-d-dt-be-main'
     branch: 'master'
     mvn-settings: 'sdc-dcae-d-dt-be-main-settings'
-    mvn-params: '-Dsonar.branch=${branch}'
+    mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
