--- a/jjb/sdc/sdc-dcae-d-fe.yaml
+++ b/jjb/sdc/sdc-dcae-d-fe.yaml
@@ -31,6 +31,6 @@
     project-name: 'sdc-dcae-d-fe'
     branch: 'master'
     mvn-settings: 'sdc-dcae-d-fe-settings'
-    mvn-params: '-Dsonar.branch=${branch}'
+    mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
