--- a/jjb/sdc/sdc-sdc-docker-base.yaml
+++ b/jjb/sdc/sdc-sdc-docker-base.yaml
@@ -11,9 +11,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'beijing':
-          branch: 'beijing'
     mvn-settings: 'sdc-sdc-docker-base-settings'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-8c-8g
+    maven-version: 'mvn35'
