Copy rebar3 instead of move
Copy rebar3 to /usr/bin instead of moving
to be able to set the proper attributes.

Change-Id: I1a873410c90250fb11702e3d45883a474176ebb2
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -128,9 +128,11 @@
       args:
         chdir: /tmp/rebar3
 
-    - name: Move rebar3 to bin
-      command: mv /tmp/rebar3/rebar3 /usr/bin/rebar3
-      become: true
+    - name: Install rebar3 to bin
+      copy:
+        src: /tmp/rebar3/rebar3
+        dest: /usr/bin/rebar3
+        remote_src: true
 
     - name: Remove unused rebar3 source
       file:
