Install Erlang and dependencies
Rebar3 depends on Erlang. Install Erlang and its
dependency packages.

Change-Id: Iac21a88d0c7d9f8f01dbcc9740a6f6fa2e5b141c
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -118,6 +118,20 @@
         state: present
       become: true
 
+    - name: Install Erlang dependency packages
+      apt:
+        name:
+          - libwxgtk3.0-0v5
+          - libsctp1
+          - libwxbase3.0-0v5
+      become: true
+
+    - name: Install Erlang
+      apt:
+        deb: https://packages.erlang-solutions.com/erlang/esl-erlang/FLAVOUR_1_general/esl-erlang_19.3.6-1~ubuntu~trusty_amd64.deb
+      install_recommends: yes
+      become: true
+
     - name: Clone rebar3
       git:
         repo: 'https://github.com/erlang/rebar3.git'
