Use root to copy rebar3
Copy rebar3 to /usr/bin as root

Change-Id: Ia40a067000ae08583dd1678be798905b59834547
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -147,6 +147,7 @@
         src: /tmp/rebar3/rebar3
         dest: /usr/bin/rebar3
         remote_src: true
+      become: true
 
     - name: Remove unused rebar3 source
       file:
