Make rebar3 executable
Change-Id: Ib9cc2124498970ca9cb82364baced9fadcf41bbf
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -146,6 +146,7 @@
       copy:
         src: /tmp/rebar3/rebar3
         dest: /usr/bin/rebar3
+        mode: 0644
         remote_src: true
       become: true
 
