Make rebar3 executable
Change-Id: Ib9cc2124498970ca9cb82364baced9fadcf41bbf
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -153,3 +153,9 @@
       file:
         path: /tmp/rebar3
         state: absent
+
+    - file:
+        path: /usr/bin/rebar3
+        mode: "+x"
+      become: true
+
