Remove sonar build for dcaegen2/collectors/hv-ves
Because hv-ves is Kotlin-based and ONAP Sonar does not currenly
support Kotlin we can drop Sonar build for this project.

In order to have some reports I've also added archive-artifacts option
to archive:
* detekt (Kotlin static code analysis) reports - placed by mvn plugin in
  target directory of each sub-module
* aggergate Jacoco coverage report.

Change-Id: Ife683105121b938cb4e9e7f233a72d2725125c26
Issue-ID: DCAEGEN2-681
Signed-off-by: Piotr Jaszczyk <piotr.jaszczyk@nokia.com>

--- a/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
@@ -12,7 +12,7 @@
     files: '**'
     maven-deploy-properties: |
       deployAtEnd=true
-    archive-artifacts: ''
+    archive-artifacts: 'hv-collector-coverage/target/site/jacoco-aggregate,**/target/reports/detekt-report.html'
     build-node: ubuntu1604-docker-8c-8g
     jobs:
       - gerrit-maven-clm
@@ -26,16 +26,3 @@
           # No-op
           script: '/bin/true'
 
-- project:
-    name: dcaegen2-collectors-hv-ves-sonar
-    jobs:
-      - gerrit-maven-sonar
-    cron: 'H 11 * * *'
-    build-node: ubuntu1604-builder-4c-4g
-    project: 'dcaegen2/collectors/hv-ves'
-    project-name: 'dcaegen2-collectors-hv-ves'
-    branch: 'master'
-    mvn-settings: 'dcaegen2-collectors-hv-ves-settings'
-    mvn-goals: 'clean install'
-    mvn-params: '-DskipDocker'
-    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
