Add geckodriver for docker
Install geckodriver for docker images.

Change-Id: I625fa148051ca260a7d1d89d7f7e118026458c8a
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -154,3 +154,11 @@
       file:
         path: /tmp/rebar3
         state: absent
+
+    - name: Download geckodriver
+      unarchive:
+        src: https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
+        dest: /usr/bin
+        mode: 0644
+        remote_src: yes
+      become: true
