Update Job trigger for Kubernetes Plugin
This patch updates job trigger to the Kubernetes plugin in the
multicloud project with the changed paths.

Change-Id: I23e9b2c21d3f990cfea0dc0790bfbf8aed81dece
Issue-ID: MULTICLOUD-301
Signed-off-by: Shashank Kumar Shankar <shashank.kumar.shankar@intel.com>

--- a/jjb/multicloud/multicloud-k8s.yaml
+++ b/jjb/multicloud/multicloud-k8s.yaml
@@ -2,7 +2,7 @@
 - project:
     name: k8s
     project-name: 'k8s'
-    path: '.'
+    path: 'src/k8splugin'
     jobs:
       - '{project-name}-{stream}-verify-golang'
       - '{project-name}-{stream}-merge-golang'
