--- a/jjb/multicloud/multicloud-k8s.yaml
+++ b/jjb/multicloud/multicloud-k8s.yaml
@@ -1,8 +1,8 @@
 ---
 - project:
-    name: k8s
-    project-name: 'k8s'
-    path: '.'
+    name: multicloud-k8s
+    project-name: 'multicloud-k8s'
+    path: 'src/k8splugin'
     jobs:
       - '{project-name}-{stream}-verify-golang'
       - '{project-name}-{stream}-merge-golang'
@@ -10,7 +10,7 @@
     stream:
       - 'master':
           branch: 'master'
-    mvn-settings: 'k8s-settings'
+    mvn-settings: 'multicloud-k8s-settings'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
