--- a/jjb/sdc/sdc-dcae-d-dt.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt.yaml
@@ -10,7 +10,7 @@
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-docker-version-java-daily':
           docker-pom: 'pom.xml'
-          mvn-profile: 'docker'
+          mvn-profile: 'server docker'
           mvn-params: '-DskipTests=true'
     project: 'sdc/dcae-d/dt'
     stream:
