Add sphinx_rtd_theme for doc verify job
Trying a new sphinx theme at RTD
It must exist for verify job to succeed
Added pip install sphinx_rtd_theme

Change-Id: Ic0783fec870a65f3576e93f2600621aee15eac62
Issue-ID: DOC-310
Signed-off-by: Rich Bennett <rb2745@att.com>

--- a/jjb/doc/doc-templates-rtd.yaml
+++ b/jjb/doc/doc-templates-rtd.yaml
@@ -74,6 +74,7 @@
           source $WORKSPACE/venv-tox/bin/activate
           pip install --upgrade pip
           pip install --upgrade tox argparse
+          pip install sphinx_rtd_theme
           pip freeze
           cd $WORKSPACE/{path}
           tox
