--- a/jjb/doc/doc-templates-rtd.yaml
+++ b/jjb/doc/doc-templates-rtd.yaml
@@ -68,6 +68,7 @@
           else
               git fetch origin $GERRIT_REFSPEC && git checkout FETCH_HEAD
           fi
+      - shell: !include-raw: doc-install-plantuml.sh
       - shell: |
           #!/bin/bash
           virtualenv $WORKSPACE/venv-tox
