--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -39,7 +39,7 @@
           server: '{server-name}'
           project: 'integration'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/**'
+          files: 'test/csit/**/{project-name}/{functionality}/**'
 
     builders:
       - integration-install-robotframework
@@ -97,7 +97,7 @@
           server: '{server-name}'
           project: 'integration'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/**'
+          files: 'test/csit/**/{project-name}/{functionality}/**'
 
     builders:
       - integration-install-robotframework
@@ -169,7 +169,7 @@
           server: '{server-name}'
           project: 'integration'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/**'
+          files: 'test/csit/**/{project-name}/{functionality}/**'
       - timed: '@daily'
       - reverse:
           jobs: '{obj:trigger_jobs}'
@@ -230,7 +230,7 @@
           server: '{server-name}'
           project: 'integration'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/**'
+          files: 'test/csit/**/{project-name}/{functionality}/**'
       - timed: '@daily'
       - reverse:
           jobs: '{obj:trigger_jobs}'
