Make helm verify job checkout gerrit patch
Change-Id: I9f93d92065fbd1d5665c2d132d99822156809bf1
Issue-ID: OOM-752
Signed-off-by: Jeremy Phelps <jphelps@linuxfoundation.org>

--- a/jjb/global-templates-helm.yaml
+++ b/jjb/global-templates-helm.yaml
@@ -55,7 +55,7 @@
     scm:
       - gerrit-trigger-scm:
           refspec: '$GERRIT_REFSPEC'
-          choosing-strategy: 'default'
+          choosing-strategy: 'gerrit'
           submodule-recursive: '{submodule-recursive}'
 
     triggers:
