Revert "Reduce jobs triggered in CSIT project"
This reverts commit fd8a4ba9daff11fba6d4aa52168aa7bb0d1eca55.

The above commit made the trigger criteria too narrow.

As an example, any changes to only dcaegen2/hv-ves-testcases/**
no longer trigger the jobs, since the functionality
name is hv-ves-testsuites.

This also impacted other projects that relied on the original
trigger criteria.

Change-Id: Ibdf9bd14196c7a122fdec047340a15b36799f91b
Issue-ID: CIMAN-200
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -39,7 +39,7 @@
           server: '{server-name}'
           project: 'integration'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/{functionality}/**'
+          files: 'test/csit/**/{project-name}/**'
 
     builders:
       - integration-install-robotframework
@@ -97,7 +97,7 @@
           server: '{server-name}'
           project: 'integration'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/{functionality}/**'
+          files: 'test/csit/**/{project-name}/**'
 
     builders:
       - integration-install-robotframework
@@ -169,7 +169,7 @@
           server: '{server-name}'
           project: 'integration'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/{functionality}/**'
+          files: 'test/csit/**/{project-name}/**'
       - timed: '@daily'
       - reverse:
           jobs: '{obj:trigger_jobs}'
@@ -230,7 +230,7 @@
           server: '{server-name}'
           project: 'integration'
           branch: '{branch}'
-          files: 'test/csit/**/{project-name}/{functionality}/**'
+          files: 'test/csit/**/{project-name}/**'
       - timed: '@daily'
       - reverse:
           jobs: '{obj:trigger_jobs}'
