Add tox execution in multicloud/k8s project
The Kubernetes plugin for MultiCloud project contains bash
instructions that validates bash and reStructured file syntax.
Those instructions are inlcuded in a tox.ini file which needs to
be included as part of Jenkins jobs.

Change-Id: I19d88ee06b8a6a1ccfdf596bbea15d347c61d1b2
Signed-off-by: Victor Morales <victor.morales@intel.com>
Issue-ID: MULTICLOUD-301

--- a/jjb/multicloud/multicloud-k8s.yaml
+++ b/jjb/multicloud/multicloud-k8s.yaml
@@ -4,6 +4,7 @@
     project-name: 'multicloud-k8s'
     path: 'src/k8splugin'
     jobs:
+      - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-verify-golang'
       - '{project-name}-{stream}-merge-golang'
     project: 'multicloud/k8s'
