--- a/jjb/multicloud/multicloud-k8s.yaml
+++ b/jjb/multicloud/multicloud-k8s.yaml
@@ -4,9 +4,14 @@
     project-name: 'multicloud-k8s'
     path: 'src/k8splugin'
     jobs:
+      - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-verify-golang'
       - '{project-name}-{stream}-merge-golang'
     project: 'multicloud/k8s'
+    subproject:
+      - validation-scripts:
+          path: '.'
+          pattern: '**'
     stream:
       - 'master':
           branch: 'master'
