--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -90,7 +90,6 @@
     - name: Install autorelease support packages
       apt:
         name:
-          - firefox
           - xmlstarlet
           - xvfb
           - crudini
@@ -161,4 +160,25 @@
         dest: /usr/bin
         mode: 0755
         remote_src: yes
+      become: true
+
+    - name: Download Firefox version 55.0.3
+      unarchive:
+        src: https://download-installer.cdn.mozilla.net/pub/firefox/releases/55.0.3/linux-x86_64/en-US/firefox-55.0.3.tar.bz2
+        dest: /tmp
+        remote_src: yes
+      become: true
+
+    - name: Install Firefox to bin
+      copy:
+        src: /tmp/firefox/firefox-bin
+        dest: /usr/bin/firefox
+        mode: 0755
+        remote_src: true
+      become: true
+
+    - name: Remove unused Firefox source
+      file:
+        path: /tmp/firefox
+        state: absent
       become: true
