Added building of policy distribution docker image
Issue-ID: POLICY-923
Change-Id: I662b3481451cb8e0008a4f28406723d2b548ea9e
Signed-off-by: mmis <michael.morris@ericsson.com>

--- a/jjb/policy/policy-distribution.yaml
+++ b/jjb/policy/policy-distribution.yaml
@@ -6,6 +6,13 @@
       - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+      - '{project-name}-{stream}-docker-version-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dmaven.test.skip=true'
+	  disabled: true
 
     project: 'policy/distribution'
     stream:
