Add docker create jobs
Add Docker create Jenkins jobs for ccsdk/apps repo

Change-Id: I3e41af2aebd8e374ed39b1578ba3b8308be6e6f7
Issue-ID: CIMAN-203
Signed-off-by: Timoney, Dan (dt5972) <dt5972@att.com>

--- a/jjb/ccsdk/apps.yaml
+++ b/jjb/ccsdk/apps.yaml
@@ -34,3 +34,22 @@
     mvn-settings: 'ccsdk-apps-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: ccsdk-apps-docker
+    project-name: 'ccsdk-apps'
+    jobs:
+      - 'docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+      - 'docker-version-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'ccsdk/apps'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'ccsdk-apps-settings'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
+    build-node: queue-docker-4c-4g
