Added apex-pdp to policy csit test build
Issue-ID: POLICY-1099
Change-Id: I5adf2cf17b82294c84fa460c2334cfb6d9ae2f0c
Signed-off-by: mmis <michael.morris@ericsson.com>

--- a/jjb/policy/policy-csit.yaml
+++ b/jjb/policy/policy-csit.yaml
@@ -11,5 +11,8 @@
             - 'policy-engine-{stream}-merge-scm-mvn-script'
             - 'policy-drools-pdp-{stream}-merge-scm-mvn-script'
             - 'policy-drools-applications-{stream}-merge-java'
+      - 'apex-pdp':
+          trigger_jobs:
+            - 'policy-apex-pdp-{stream}-merge-scm-mvn-script'
     robot-options: ''
     branch: 'master'
