--- a/jjb/logging-analytics/logging-analytics-pomba-pomba-aai-context-builder.yaml
+++ b/jjb/logging-analytics/logging-analytics-pomba-pomba-aai-context-builder.yaml
@@ -19,6 +19,7 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+    maven-version: 'mvn35'
 
 - project:
     name: logging-analytics-pomba-pomba-aai-context-builder-sonar
@@ -31,6 +32,7 @@
     branch: master
     mvn-settings: logging-analytics-pomba-pomba-aai-context-builder-settings
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    maven-version: 'mvn35'
 
 - project:
     name: logging-analytics-pomba-pomba-aai-context-builder-info
