Add mvn-params to merge-java job
Some projects like policy-distribution need to make
reference to a specific pom file profile for performing
the merge. Allowing to pass a profile name as optional
parameter "mvn-params"

Change-Id: Ic91685c0f8d571f636bbf1f4477625e1470daae3
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -561,6 +561,7 @@
     pattern: '**'
     pom:
     mvn_properties: []
+    mvn-params: ''
 
     properties:
       - infra-properties:
@@ -599,7 +600,7 @@
       - maven-target:
           maven-version: '{maven-version}'
           pom: '{obj:pom}'
-          goals: 'clean deploy -B
+          goals: 'clean deploy -B {mvn-params}
             -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
           settings: '{mvn-settings}'
           settings-type: cfp
