Use docker node for docker based jobs
Move to a docker based node for policy-distribution
docker jobs.

Change-Id: I83330b9b4d384fc8ae72a363bd22647d143ee188
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/policy/policy-distribution.yaml
+++ b/jjb/policy/policy-distribution.yaml
@@ -8,11 +8,13 @@
       - '{project-name}-{stream}-merge-java':
           docker-pom: 'pom.xml'
           mvn-params: '-P docker'
+          build-node: ubuntu1604-docker-8c-8g
       - '{project-name}-{stream}-docker-version-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
           disabled: true
+          build-node: ubuntu1604-docker-8c-8g
 
     project: 'policy/distribution'
     stream:
