--- a/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
+++ b/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
@@ -13,7 +13,7 @@
     maven-deploy-properties: |
       deployAtEnd=true
     archive-artifacts: ''
-    build-node: ubuntu1604-builder-4c-4g
+    build-node: ubuntu1604-docker-8c-8g
     jobs:
       - gerrit-maven-clm
       - '{project-name}-{stream}-release-version-java-daily'
@@ -27,7 +27,7 @@
     jobs:
       - gerrit-maven-sonar
     cron: 'H 11 * * *'
-    build-node: ubuntu1604-builder-4c-4g
+    build-node: ubuntu1604-docker-8c-8g
     project: 'dcaegen2/analytics/tca-gen2'
     project-name: 'dcaegen2-analytics-tca-gen2'
     branch: 'master'
