fix tca jjb definition
Change-Id: I6ae427c25723794662b325572b47cb08bf85738a
Signed-off-by: Vijay Venkatesh Kumar <vv770d@att.com>
Issue-ID: DCAEGEN2-772

--- a/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
+++ b/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
@@ -16,11 +16,12 @@
     build-node: ubuntu1604-docker-8c-8g
     jobs:
       - gerrit-maven-clm
-      - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-verify-java':
-          mvn-goals: 'clean install'
       - '{project-name}-{stream}-merge-java':
+      - '{project-name}-{stream}-docker-java-shell-daily':
           mvn-goals: 'clean deploy'
+          # No-op
+          script: '/bin/true'
 
 - project:
     name: dcaegen2-analytics-tca-gen2-sonar
