Add DataFile Collector CSIT Jenkins
Change-Id: Ie6fdb4ccf7f856ba848863e911fc0345a3335cbd
Issue-ID: DCAEGEN2-566
Signed-off-by: LiamBurke <liam.burke@ericsson.com>

--- a/jjb/dcaegen2/dcaegen2-collectors-datafile.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-datafile.yaml
@@ -1,36 +1,14 @@
 ---
 - project:
-    name: dcaegen2-collectors-datafile
-    # job template iterators
-    project-name: 'dcaegen2-collectors-datafile'
-    stream:
-      - 'master':
-          branch: 'master'
-    # apply to all jobs
-    project: 'dcaegen2/collectors/datafile'
-    mvn-settings: 'dcaegen2-collectors-datafile-settings'
-    files: '**'
-    maven-deploy-properties: |
-      deployAtEnd=true
-    archive-artifacts: ''
-    build-node: ubuntu1604-docker-8c-8g
+    name: dcaegen2-collectors-datafile-csit
     jobs:
-      - gerrit-maven-clm
-      - '{project-name}-{stream}-release-version-java-daily'
-      - '{project-name}-{stream}-verify-java':
-          mvn-goals: 'clean install'
-      - '{project-name}-{stream}-merge-java':
-          mvn-goals: 'clean deploy'
-
-- project:
-    name: dcaegen2-collectors-datafile-sonar
-    jobs:
-      - gerrit-maven-sonar
-    cron: 'H 11 * * *'
-    build-node: ubuntu1604-builder-4c-4g
-    project: 'dcaegen2/collectors/datafile'
+      - '{project-name}-{stream}-verify-csit-{functionality}'
+      - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'dcaegen2-collectors-datafile'
+    stream: 'master'
+    functionality:
+      - 'datafile':
+          trigger_jobs:
+            - '{project-name}-{stream}-docker-java-shell-daily'
+    robot-options: ''
     branch: 'master'
-    mvn-settings: 'dcaegen2-collectors-datafile-settings'
-    mvn-goals: 'clean install'
-    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
