Adding docker goals to tca-gen2-
To enable docker build and push via tca-gen2-docker-java-shell-daily

Currently job creates/pushes only jar

Change-Id: I7244dd4e61fa0d5f6a92c22d461abd158b31504b
Signed-off-by: Vijay Venkatesh Kumar <vv770d@att.com>
Issue-ID: DCAEGEN2-772

--- a/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
+++ b/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
@@ -19,7 +19,7 @@
       - '{project-name}-{stream}-verify-java':
       - '{project-name}-{stream}-merge-java':
       - '{project-name}-{stream}-docker-java-shell-daily':
-          mvn-goals: 'clean deploy'
+          mvn-goals: 'clean deploy docker:build -DpushImage'
           # No-op
           script: '/bin/true'
 
