Update aai jenkins jobs to mvn35
Issue-ID: AAI-1656
Change-Id: I8e64faaede4f7cfdf059492a6421c77923b2b775
Signed-off-by: Kajur, Harish (vk250x) <vk250x@att.com>

--- a/jjb/aai/aai-cacher.yaml
+++ b/jjb/aai/aai-cacher.yaml
@@ -16,6 +16,7 @@
       - 'master':
           branch: 'master'
     mvn-settings: 'aai-cacher-settings'
+    mvn-version: 'mvn35'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
@@ -32,3 +33,4 @@
     mvn-settings: 'aai-cacher-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    mvn-version: 'mvn35'
