--- a/jjb/aai/aai-aai-common.yaml
+++ b/jjb/aai/aai-aai-common.yaml
@@ -14,6 +14,7 @@
       - 'beijing':
           branch: 'beijing'
     mvn-settings: 'aai-aai-common-settings'
+    mvn-version: 'mvn35'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
@@ -30,3 +31,4 @@
     mvn-settings: 'aai-aai-common-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    mvn-version: 'mvn35'
