--- a/jjb/dcaegen2/dcaegen2-collectors-datafile.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-datafile.yaml
@@ -27,7 +27,7 @@
     jobs:
       - gerrit-maven-sonar
     cron: 'H 11 * * *'
-    build-node: ubuntu1604-builder-4c-4g
+    build-node: ubuntu1604-docker-8c-8g
     project: 'dcaegen2/collectors/datafile'
     project-name: 'dcaegen2-collectors-datafile'
     branch: 'master'
