Added distribution to policy csit test build
Issue-ID: POLICY-924
Change-Id: Iddf2ce4599375916f9a7c4373d584217d0a742c2
Signed-off-by: mmis <michael.morris@ericsson.com>

--- a/jjb/policy/policy-csit.yaml
+++ b/jjb/policy/policy-csit.yaml
@@ -28,3 +28,16 @@
     robot-options: ''
     branch: 'master'
 
+- project:
+    name: policy-distribution-csit
+    jobs:
+      - '{project-name}-{stream}-verify-csit-{functionality}'
+      - '{project-name}-{stream}-csit-{functionality}'
+    project-name: 'policy'
+    stream: 'master'
+    functionality:
+      - 'distribution'
+    trigger_jobs:
+      - 'policy-distribution-{stream}-merge-java'
+    robot-options: ''
+    branch: 'master'
