Update docker mvn goals
tca-gen2 docker goals binded to mvn phases
Removing un-necessary docker goals during build

Change-Id: Ibaa5d3311dd5696aa8461205b4e2125a56f9a74a
Signed-off-by: Vijay Venkatesh Kumar <vv770d@att.com>
Issue-ID: DCAEGEN2-772

--- a/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
+++ b/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
@@ -18,8 +18,9 @@
       - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java':
       - '{project-name}-{stream}-merge-java':
+          mvn-goals: 'clean install'
       - '{project-name}-{stream}-docker-java-shell-daily':
-          mvn-goals: 'clean deploy docker:build -DpushImage'
+          mvn-goals: 'clean deploy'
           # No-op
           script: '/bin/true'
 
