Fix installation path for Firefox
Update installation path for Firefox

Change-Id: Ic0d730660bc5d14121366a6d4f1e7228c30dca2f
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -165,10 +165,16 @@
         remote_src: yes
       become: true
 
+    - file:
+        path: /usr/bin/firefox-bin
+        state: directory
+        mode: 0755
+      become: true
+
     - name: Download Firefox version 55.0.3
       unarchive:
         src: https://download-installer.cdn.mozilla.net/pub/firefox/releases/55.0.3/linux-x86_64/en-US/firefox-55.0.3.tar.bz2
-        dest: /tmp
+        dest: /usr/bin/firefox-bin
         mode: 0755
         remote_src: yes
       become: true
